cd/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-backend
  namespace: library
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-backend
  template:
    metadata:
      labels:
        app: library-backend
    spec:
      containers:
        - name: library-backend
          image: wngud1/backend-library:wngud1-backend-library-main-b52b74ef8e55888178cb0922d090c2cf8c90b2b2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
