cd/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-front
  namespace: library
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-front
  template:
    metadata:
      labels:
        app: library-front
    spec:
      containers:
        - name: library-front
          image: wngud1/front-library:wngud1-front-library-main-b52b74ef8e55888178cb0922d090c2cf8c90b2b2
          ports:
            - containerPort: 80
          imagePullPolicy: Always
