cd/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-backend-svc
  namespace: library
spec:
  selector:
    app: library-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
