cd/front-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: library-front-svc
  namespace: library
spec:
  selector:
    app: library-front
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
